--- a/WebDev2/webDev2.html
+++ b/WebDev2/webDev2.html
@@ -1,12 +1,22 @@
-<div class="atom">
-	<div class="center"></div>
-	<div class="orbit orbit1">
-		<div class="electron elector1"></div>
-	</div>
-	<div class="orbit orbit2">
-		<div class="electron electron2"></div>
-	</div>
-	<div class="orbit orbit3">
-		<div class="electron electron3"></div>
-	</div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name ="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="webDev2.css">
+</head>
+<body>
+    <div class="atom">
+        <div class="center"></div>
+        <div class="orbit orbit1">
+            <div class="electron elector1"></div>
+        </div>
+        <div class="orbit orbit2">
+            <div class="electron electron2"></div>
+        </div>
+        <div class="orbit orbit3">
+            <div class="electron electron3"></div>
+        </div>
+    </div>
+</body>
