--- a/wa/wa2.html
+++ b/wa/wa2.html
@@ -31,9 +31,9 @@
         <p>Hi, I'm Caitlin Owen (she/her)! I'm from New York and now studying computer science and CTD here.</p>
         
         <!-- Image with both display and link -->
-        <img src="../img/wa2Image.jpeg" alt="A photo of me" class="profile-img">
+        <img src="/img/wa2Image.jpeg" alt="A photo of me" class="profile-img">
         <br>
-        <a href="../img/wa2Image.jpeg">Click to see my profile picture</a>
+        <a href="/img/wa2Image.jpeg">Click to see my profile picture</a>
     </div>
 
     <div class="goals">
