Updated business card

--- a/wa/wa4/wa4.html
+++ b/wa/wa4/wa4.html
@@ -27,7 +27,7 @@
     </footer>
   </section>
 
-  <section class ="personal card">
+  <section class ="personal_card">
     <header>
         <h2>Caitlin Owen</h2>
     </header>
@@ -42,7 +42,7 @@
            <strong>Mail</strong>: caitlin.owen@colorado.edu</p>
     </article>
     <footer>
-        <p>Student</p>
+        <p>Student, Major: Computer Science, Minor: Creative Technology & Design</p>
       </footer>
   </section>
 
