--- a/wa/wa4/wa4.html
+++ b/wa/wa4/wa4.html
@@ -42,7 +42,7 @@
            <strong>Mail</strong>: caitlin.owen@colorado.edu</p>
     </article>
     <footer>
-        <p>Student, Major: Computer Science, Minor: Creative Technology & Design</p>
+        <p>Major: CS, Minor: CTD</p>
       </footer>
   </section>
 
