--- a/wa/wa5/wa5.html
+++ b/wa/wa5/wa5.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Screen Image with Overlay</title>
+    <title>Full Screen Image with Overlays</title>
     <link rel="stylesheet" href="wa5.css">
 </head>
 <body>
 
     <div class="image-container">
         <img src="DjokovicAlcaraz.jpg" alt="Tennis Match">
-        <div class="overlay">
-            <img src="OverlayScoreBoard .jpeg" alt="Tennis Score" class="score-overlay">
-        </div>
+    </div>
+
+    <div class="overlay bottom-right">
+        <img src="OverlayScoreBoard .jpeg" alt="Tennis Score" class="score-overlay">
+    </div>
+
+    <div class="overlay top-left">
+        <img src="logo.png" alt="Logo" class="logo-overlay">
     </div>
 
 </body>
