--- a/wa/wa10/wa10.html
+++ b/wa/wa10/wa10.html
@@ -3,43 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-
+    <link rel="stylesheet" href="wa10.css">
+    <link rel="stylesheet" href="wa10.css">
+    
     <title>Silly story generator</title>
 
-    <style> /*change the cs*/
-      body {
-        font-family: helvetica, sans-serif;
-        width: 350px;
-      }
-
-      label {
-        font-weight: bold;
-      }
-
-      div {
-        padding-bottom: 20px;
-      }
-
-      input[type="text"] {
-        padding: 5px;
-        width: 150px;
-      }
-
-      p {
-        background: #ffc125;
-        color: #5e2612;
-        padding: 10px;
-        visibility: hidden;
-      }
+    <style>
+      /* Your CSS code here (the more different CSS I provided) */
     </style>
   </head>
 
   <body>
-    <div>
-        <script>
-            /*bunch of js*/
-        </script>
-    </div>
     <div>
       <label for="customname">Enter custom name:</label>
       <input id="customname" type="text" placeholder="" />
@@ -54,7 +28,8 @@
       <button class="randomize">Generate random story</button>
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
-    <p class="story"></p> 
-    /*write a story*/
+    <p class="story"></p>
+
+    <script src="wa10.js"></script>
   </body>
 </html>
