JSProject so far

--- a/JSProject/JSProject.html
+++ b/JSProject/JSProject.html
@@ -17,3 +17,9 @@
     <script src="JSProject.js"></script>
 </body>
 </html>
+
+<!--
+Plan:
+edit css to make it look more dark, sci-fi, techy, futuristic
+Add a ticking bomb, you must enter each digit before the bomb explodes, or you will have to start over again. 
+-->
