--- a/JSProject/JSProject.html
+++ b/JSProject/JSProject.html
@@ -13,6 +13,24 @@
         <textarea id="morseInput" placeholder="Enter Morse Code here..."></textarea>
         <button id="submitBtn">Submit</button>
         <div id="result"></div>
+        <div id="timer" style="color: red; font-size: 24px; margin-top: 20px;"></div> <!-- Timer display -->
+    </div>
+    <div id="morseKey">
+        <h2>Morse Code Key</h2>
+        <table>
+            <tr><td>0</td><td>-----</td></tr>
+            <tr><td>1</td><td>.----</td></tr>
+            <tr><td>2</td><td>..---</td></tr>
+            <tr><td>3</td><td>...--</td></tr>
+            <tr><td>4</td><td>....-</td></tr>
+            <tr><td>5</td><td>.....</td></tr>
+            <tr><td>6</td><td>-....</td></tr>
+            <tr><td>7</td><td>--...</td></tr>
+            <tr><td>8</td><td>---..</td></tr>
+            <tr><td>9</td><td>----.</td></tr>
+            <tr><td>Y (yes)</td><td>-.--</td></tr>
+            <tr><td>N (no)</td><td>-.</td></tr>
+        </table>
     </div>
     <script src="JSProject.js"></script>
 </body>
