JS Project COMPLETE

--- a/JSProject/JSProject.html
+++ b/JSProject/JSProject.html
@@ -38,6 +38,5 @@
 
 <!--
 Plan:
-edit css to make it look more dark, sci-fi, techy, futuristic
-Add a ticking bomb, you must enter each digit before the bomb explodes, or you will have to start over again. 
+make screen flash red for 3 seconds when the timer goes off
 -->
