--- a/JSProject/JSProject.html
+++ b/JSProject/JSProject.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="color: white;">Enter Your Phone Number Digit by Digit in Morse Code</h1>
+        <h1 style="color: white;">Please Enter Your Phone Number... in Morse Code</h1>
         <div id="morsePrompt">Digit 1:</div>
-        <textarea id="morseInput" placeholder="Enter Morse Code here..."></textarea>
+        <textarea id="morseInput" placeholder="Enter Morse Code digits here..."></textarea>
         <button id="submitBtn">Submit</button>
         <div id="result"></div>
         <div id="timer" style="color: red; font-size: 24px; margin-top: 20px;"></div> <!-- Timer display -->
     </div>
+    <!--
     <div id="morseKey">
         <h2>Morse Code Key</h2>
         <table>
@@ -32,11 +33,8 @@
             <tr><td>N (no)</td><td>-.</td></tr>
         </table>
     </div>
+    -->  
     <script src="JSProject.js"></script>
 </body>
 </html>
 
-<!--
-Plan:
-make screen flash red for 3 seconds when the timer goes off
--->
