--- a/JSProject/JSProject.html
+++ b/JSProject/JSProject.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="JSProject.css">
 </head>
 <body>
+    <div id="overlay" style="display: none;"></div>
     <div class="container">
         <h1 style="color: white;">Please Enter Your Phone Number... in Morse Code</h1>
         <div id="morsePrompt">Digit 1:</div>
@@ -15,25 +16,6 @@
         <div id="result"></div>
         <div id="timer" style="color: red; font-size: 24px; margin-top: 20px;"></div> <!-- Timer display -->
     </div>
-    <!--
-    <div id="morseKey">
-        <h2>Morse Code Key</h2>
-        <table>
-            <tr><td>0</td><td>-----</td></tr>
-            <tr><td>1</td><td>.----</td></tr>
-            <tr><td>2</td><td>..---</td></tr>
-            <tr><td>3</td><td>...--</td></tr>
-            <tr><td>4</td><td>....-</td></tr>
-            <tr><td>5</td><td>.....</td></tr>
-            <tr><td>6</td><td>-....</td></tr>
-            <tr><td>7</td><td>--...</td></tr>
-            <tr><td>8</td><td>---..</td></tr>
-            <tr><td>9</td><td>----.</td></tr>
-            <tr><td>Y (yes)</td><td>-.--</td></tr>
-            <tr><td>N (no)</td><td>-.</td></tr>
-        </table>
-    </div>
-    -->  
     <script src="JSProject.js"></script>
 </body>
 </html>
