--- a/Portfolio.html
+++ b/Portfolio.html
@@ -24,7 +24,7 @@
       <a href="#/" data-link class="nav-link">Home</a>
       <a href="#/projects" data-link class="nav-link">Projects</a>
       <a href="#/contact" data-link class="nav-link">Contact</a>
-      <a class="resume-btn" href="assets/Caitlin_Owen_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+      <!--<a class="resume-btn" href="assets/Caitlin_Owen_Resume.pdf" target="_blank" rel="noopener">Resume</a>-->
     </nav>
   </header>
 
@@ -32,22 +32,22 @@
     <!-- Home -->
     <section id="home" class="route active" data-route="/">
       <div class="hero">
-        <img class="hero-photo" src="assets/me.jpg" alt="Portrait of Caitlin Owen" />
+        <img class="hero-photo" src="AIHeadshot.png" alt="Portrait of Caitlin Owen" />
         <div class="hero-copy">
-          <h1>Hi, I’m <span class="accent">Caitlin</span> 👋</h1>
+          <h1>Hello, I’m <span class="accent">Caitlin</span> </h1>
           <p class="lead">
-            Creative Technology & Design student @ CU Boulder. I love building innovative, creative, out-of-the-box ideas 
+            Creative Technology & Design student at CU Boulder. I love creating innovative, out-of-the-box ideas 
             and bringing them to life through engineering, constructing, and designing.
           </p>
           <ul class="quick-facts">
-            <li>• Focus: Product Design, Graphic Design, Form, Sustainability</li>
+            <li>• Focus: Product Design, Creative Technology, Graphic Design</li>
             <li>• Tools: C++, JavaScript, HTML, CSS, Python, Adobe (Illustrator, InDesign, Photoshop, Lightroom), 
                 Ableton Live, Microsoft (Word, Excel, Powerpoint)</li>
-            <li>• Interests: Ideating, Production, Art</li>
+            <li>• Interests: Ideating, Form, Art, Sustainability</li>
           </ul>
 
           <div class="cta-row">
-            <a class="btn primary" href="#/projects" data-link>See my projects</a>
+            <a class="btn primary" href="#/projects" data-link>Check out my projects</a>
             <a class="btn ghost" href="#/contact" data-link>Get in touch</a>
           </div>
         </div>
@@ -55,110 +55,170 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="route" data-route="/projects" aria-labelledby="projects-title">
-      <h2 id="projects-title">Projects</h2>
-      <p class="section-intro">A few things I’ve built and designed. Click through for details.</p>
+<section id="projects" class="route" data-route="/projects" aria-labelledby="projects-title">
+  <h2 id="projects-title">Projects</h2>
+  <p class="section-intro">A few things I’ve built and designed. Click through for details.</p>
 
-      <div class="cards">
-        <!-- Project 1 -->
-        <article class="card">
-          <img src="assets/project-tribbles.jpg" alt="Plot and code for population modeling project" />
-          <div class="card-body">
-            <h3>Tribble Population Modeling</h3>
-            <p>ODE system modeling with stability analysis and phase-plane exploration; parameter sweeps and
-              visualization in MATLAB.</p>
-            <div class="tags">
-              <span>MATLAB</span><span>ODEs</span><span>Phase Portraits</span>
-            </div>
-            <div class="links">
-              <a href="https://github.com/youruser/tribble-model" target="_blank" rel="noopener">Code</a>
-              <a href="assets/tribble-report.pdf" target="_blank" rel="noopener">Report</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project 2 -->
-        <article class="card">
-          <img src="assets/project-wingtip.jpg" alt="Whiffle tree test setup and deflection plots" />
-          <div class="card-body">
-            <h3>Whiffle Tree Wing-Tip Deflection</h3>
-            <p>Designed test plan and analyzed beam/spar deflection under distributed loads; uncertainty quantification and
-              comparison to theory.</p>
-            <div class="tags">
-              <span>Statics</span><span>Lab</span><span>Data Viz</span>
-            </div>
-            <div class="links">
-              <a href="https://github.com/youruser/wing-deflection" target="_blank" rel="noopener">Code</a>
-              <a href="assets/wingtip-poster.pdf" target="_blank" rel="noopener">Poster</a>
-            </div>
-          </div>
-        </article>
-
-        <!-- Project 3 -->
-        <article class="card">
-          <img src="assets/project-svd.jpg" alt="Diagram of Gram-Schmidt + power iteration process" />
-          <div class="card-body">
-            <h3>Orthogonal Eigenvectors via GS + Power Iteration</h3>
-            <p>Custom SVD-style routine on AᵀA for fast orthogonal eigenvector estimation; iterative normalization and convergence study.</p>
-            <div class="tags">
-              <span>Python</span><span>Linear Algebra</span><span>SVD</span>
-            </div>
-            <div class="links">
-              <a href="https://github.com/youruser/gs-power-iteration" target="_blank" rel="noopener">Code</a>
-              <a href="assets/gs-note.pdf" target="_blank" rel="noopener">Notes</a>
-            </div>
-          </div>
-        </article>
+  <div class="cards">
+    <!-- Project 1 -->
+    <article class="card">
+      <img src="AccountavapeLogo.png" alt="Accountavape project logo" />
+      <div class="card-body">
+        <h3>Accountavape</h3>
+        <p>ACCOUNTAVAPE allows users to pair their own vape devices with our system to automatically count puffs. This innovative combination of real-time tracking and accountability offers a unique and effective approach to combat the vaping epidemic.</p>
+        <div class="tags">
+          <span>VSCode</span><span>OnShape</span><span>Arduino</span><span>Bluetooth</span><span>App Development</span><span>Graphic Design</span>
+        </div>
+        <div class="links">
+          <a href="#" target="_blank" rel="noopener">Code</a>
+          <a href="#" target="_blank" rel="noopener">Report</a>
+        </div>
       </div>
-    </section>
+    </article>
+
+    <!-- Project 2 -->
+    <article class="card">
+      <img src="Lego Instructions.png" alt="Instructions for uniquely designed Lego models" />
+      <div class="card-body">
+        <h3>Lego Instructions</h3>
+        <p>Designed and 3D modeled LEGO pieces arranged into three structures, compiled into a step-by-step PDF booklet.</p>
+        <div class="tags">
+          <span>Planning</span><span>SketchUp</span><span>Illustrator</span><span>Graphic Design</span>
+        </div>
+        <div class="links">
+          <a href="#" target="_blank" rel="noopener">Code</a>
+          <a href="#" target="_blank" rel="noopener">Poster</a>
+        </div>
+      </div>
+    </article>
+
+    <!-- Project 3 -->
+    <article class="card">
+      <img src="Balance Back.png" alt="Balance Back app layout for farmers" />
+      <div class="card-body">
+        <h3>Balance Back</h3>
+        <p>App design layout for farmers to track water and chemical levels across field sections.</p>
+        <div class="tags">
+          <span>Planning</span><span>Figma</span><span>App Layout</span><span>Graphic Design</span>
+        </div>
+        <div class="links">
+          <a href="#" target="_blank" rel="noopener">Code</a>
+          <a href="#" target="_blank" rel="noopener">Notes</a>
+        </div>
+      </div>
+    </article>
+
+    <!-- Project 4 -->
+    <article class="card">
+      <img src="Easie Breezies.png" alt="Easie Breezies mint packaging dieline" />
+      <div class="card-body">
+        <h3>Easie Breezies</h3>
+        <p>Dieline concept for a mint brand created and designed by me.</p>
+        <div class="tags">
+          <span>Illustrator</span><span>InDesign</span><span>Graphic Design</span><span>Product Design</span><span>Typography</span>
+        </div>
+        <div class="links">
+          <a href="#" target="_blank" rel="noopener">Code</a>
+          <a href="#" target="_blank" rel="noopener">Notes</a>
+        </div>
+      </div>
+    </article>
+
+    <!-- Project 5 -->
+    <article class="card">
+      <img src="Balance%20Back.png" alt="Balance Back app layout" />
+      <div class="card-body">
+        <h3>Balance Back – Research</h3>
+        <p>Information architecture and research artifacts supporting the Balance Back UI.</p>
+        <div class="tags">
+          <span>Research</span><span>User Flows</span><span>UX</span>
+        </div>
+        <div class="links">
+          <a href="#" target="_blank" rel="noopener">Doc</a>
+        </div>
+      </div>
+    </article>
+
+    <!-- Project 6 -->
+    <article class="card">
+      <img src="Balance%20Back.png" alt="Balance Back alt screens" />
+      <div class="card-body">
+        <h3>Balance Back – Screens</h3>
+        <p>Alternate screen variations exploring typography and color for accessibility.</p>
+        <div class="tags">
+          <span>Figma</span><span>Accessibility</span><span>UI</span>
+        </div>
+        <div class="links">
+          <a href="#" target="_blank" rel="noopener">Figma</a>
+        </div>
+      </div>
+    </article>
+  </div>
+</section>
+
 
     <!-- Contact -->
-    <section id="contact" class="route" data-route="/contact" aria-labelledby="contact-title">
-      <h2 id="contact-title">Contact</h2>
-      <p class="section-intro">I’m open to part-time roles, internships, and collaborations.</p>
+<section id="contact" class="route" data-route="/contact" aria-labelledby="contact-title">
+  <h2 id="contact-title">Contact</h2>
+  <p class="section-intro">I’m open to part-time roles, internships, and collaborations.</p>
 
-      <div class="contact-grid">
-        <div class="contact-card">
-          <h3>Email</h3>
-          <p><a href="mailto:jonesyowen@gemail.com">jonesyowen@gmail.com@gmail.com</a></p>
-          <button class="btn small" data-copy="jonesyowen@gmail.com">Copy</button>
-        </div>
-
-        <div class="contact-card">
-          <h3>LinkedIn</h3>
-          <p><a href="https://www.linkedin.com/in/your-handle" target="_blank" rel="noopener">linkedin.com/in/your-handle</a></p>
-          <button class="btn small" data-copy="https://www.linkedin.com/in/your-handle">Copy</button>
-        </div>
-
-        <div class="contact-card">
-          <h3>GitHub</h3>
-          <p><a href="https://github.com/youruser" target="_blank" rel="noopener">github.com/youruser</a></p>
-          <button class="btn small" data-copy="https://github.com/youruser">Copy</button>
-        </div>
+  <!-- NEW wrapper: cards on the left, form on the right -->
+  <div class="contact-wrap">
+    <!-- One grid for all contact cards -->
+    <div class="contact-grid">
+      <div class="contact-card">
+        <h3>Email</h3>
+        <p><a href="mailto:jonesyowen@gmail.com">jonesyowen@gmail.com</a></p>
+        <button class="btn small" data-copy="jonesyowen@gmail.com">Copy</button>
       </div>
 
-      <form class="contact-form" action="https://formspree.io/f/your-id" method="POST">
-        <label>
-          Name
-          <input name="name" type="text" required />
-        </label>
-        <label>
-          Email
-          <input name="email" type="email" required />
-        </label>
-        <label>
-          Message
-          <textarea name="message" rows="5" required></textarea>
-        </label>
-        <button class="btn primary" type="submit">Send</button>
-      </form>
-    </section>
+      <div class="contact-card">
+        <h3>Phone</h3>
+        <p><a href="tel:+19143125074">(914) 312-5074</a></p>
+        <button class="btn small" data-copy="+19143125074">Copy</button>
+      </div>
+
+      <div class="contact-card">
+        <h3>LinkedIn</h3>
+        <p><a href="https://www.linkedin.com/in/caitlin-owen-997a8428a" target="_blank" rel="noopener">
+          linkedin.com/in/caitlin-owen-997a8428a
+        </a></p>
+        <button class="btn small" data-copy="https://www.linkedin.com/in/caitlin-owen-997a8428a">Copy</button>
+      </div>
+
+      <div class="contact-card">
+        <h3>GitHub</h3>
+        <p><a href="https://github.com/caitlinowen26/caitlinowen26.github.io" target="_blank" rel="noopener">
+          github.com/caitlinowen26/caitlinowen26.github.io
+        </a></p>
+        <button class="btn small" data-copy="https://github.com/caitlinowen26/caitlinowen26.github.io">Copy</button>
+      </div>
+    </div>
+
+    <!-- Form sits to the right on large screens, drops below on mobile -->
+    <form class="contact-form" action="https://formspree.io/f/your-id" method="POST">
+      <label>
+        Name
+        <input name="name" type="text" required />
+      </label>
+      <label>
+        Email
+        <input name="email" type="email" required />
+      </label>
+      <label>
+        Message
+        <textarea name="message" rows="5" required></textarea>
+      </label>
+      <button class="btn primary" type="submit">Send</button>
+    </form>
+  </div>
+</section>
   </main>
 
   <footer class="site-footer">
     <small>© <span id="year"></span> Caitlin Owen • Built with HTML/CSS/JS</small>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="Portfolio.js"></script>
 </body>
 </html>
