updated portfolio as of sept 24

--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -127,7 +127,7 @@
           <div class="card-body">
             <h3>Hand-made Stool</h3>
             <p>Used 2x2 Pine Lumber and Deck Screws. 3D Model designed on SketchUp first. Used Dovetail Lap Joint.</p>
-            <a class="visit-link" href="Assignment 2.pdf" target="_blank" rel="noopener">View project! →</a>
+            <a class="visit-link" href="Asg 2_ 2x2 Furniture (1).pdf" target="_blank" rel="noopener">View project! →</a>
             <div class="tags">
               <span>SketchUp</span><span>Woodshop</span><span>Form</span>
             </div>
